Fixed repo-scope dropdown-menu alignment

--- a/code/scss/content.sass
+++ b/code/scss/content.sass
@@ -270,7 +270,7 @@ $gh-primary-color: #3879D9
     position: relative
   .awesome-autocomplete
     .twitter-typeahead
-      position: static 
+      position: static
       width: 162px
       .tt-dropdown-menu
         width: 300px
@@ -286,7 +286,7 @@ $gh-primary-color: #3879D9
 .site-header-nav-secondary .js-site-search-form .awesome-autocomplete .twitter-typeahead .tt-dropdown-menu
   margin-left: -200px
 .js-site-search .awesome-autocomplete.repo-scope .twitter-typeahead .tt-dropdown-menu
-  margin-left: -122px
+  margin-left: -110px
 .js-site-search .awesome-autocomplete.org-scope .twitter-typeahead .tt-dropdown-menu
   margin-left: -122px
 // results page search bar
